--- a/FileStorage/server/pom.xml
+++ b/FileStorage/server/pom.xml
@@ -55,9 +55,9 @@
 
         <!-- Other  -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.1</version>
         </dependency>
 
         <dependency>
