--- a/FileStorage/server/src/main/resources/application.properties
+++ b/FileStorage/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/remote_storage_app
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=Dewey
-spring.datasource.password=123456
+spring.datasource.url=jdbc:postgresql://localhost:5432/remote_storage_app
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
